--- a/content/posts/[1627749450585][What is an Image][].md
+++ b/content/posts/[1627749450585][What is an Image][].md
@@ -15,7 +15,7 @@ typedef struct
     u32 height;
     u8* data;
 
-} MonoImage
+} MonoImage;
 ```
 
 To create a new image...
@@ -90,6 +90,17 @@ void for_each_pixel(MonoImage& image, std::function<void(u8& p, u32 x, u32 y)> c
 }
 ```
 
+Get the value of a pixel at a given x and y.
+```cpp
+u8 pixel_value(MonoImage const& image, u32 x, u32 y)
+{
+    auto row_offset = static_cast<size_t>(y * image.width);
+    auto row_begin = image.data + row_offset;
+
+    return row_begin[x];
+}
+```
+
 Putting it all together
 ```cpp
 #include <cstdint>
@@ -105,7 +116,7 @@ typedef struct
     u32 height;
     u8* data;
 
-} MonoImage
+} MonoImage;
 
 
 void make_image(MonoImage& image, u32 width, u32 height)
@@ -155,31 +166,56 @@ void for_each_pixel(MonoImage& image, std::function<void(u8& p, u32 x, u32 y)> c
 }
 
 
+u8 pixel_value(MonoImage const& image, u32 x, u32 y)
+{
+    auto row_offset = static_cast<size_t>(y * image.width);
+    auto row_begin = image.data + row_offset;
+
+    return row_begin[x];
+}
+
+
 int main()
 {
-    MonoImage image;
-    u32 image_width = 1600;
-    u32 image_height = 900;
-
-    make_image(image, image_width, image_height);
-
-    // set the pixel to white
-    auto const set_as_white = [](u8& p){ p = 255; };
-
-    for_each_pixel(image, set_as_white);
+    // sets a pixel to white
+    auto const set_white = [](u8& p) { p = 255; };
 
     // set the pixel to black if x and y are both even
     auto const black_if_even = [](u8& p, u32 x, u32 y)
     {
-        if(x % 2 == 0 && y % 2 == 0)
-        {
-            p = 0;
-        }
+        if (x % 2 == 0 && y % 2 == 0) { p = 0; }
     };
 
+    // print to console whether a pixel is what we think it should be
+    auto const check_pixel = [](u8 p, u8 expected_value) 
+    {
+        auto const msg = p == expected_value ? "ok" : "not ok";
+        std::cout << "pixel: " << u32(p) << ", expected: " << u32(expected_value) << " - " << msg << "\n";
+    };
+
+
+    MonoImage image;
+    u32 image_width = 16;
+    u32 image_height = 9;
+
+    make_image(image, image_width, image_height);    
+
+    // set all pixels to white
+    for_each_pixel(image, set_white);
+    check_pixel(pixel_value(image, 0, 0), 255);
+    check_pixel(pixel_value(image, 3, 3), 255);
+    check_pixel(pixel_value(image, 15, 8), 255);
+    
+    // set even x and y pixels to black
     for_each_pixel(image, black_if_even);
+    check_pixel(pixel_value(image, 0, 0), 0);
+    check_pixel(pixel_value(image, 3, 3), 255);
+    check_pixel(pixel_value(image, 15, 8), 255);
+    check_pixel(pixel_value(image, 10, 6), 0);
 
     dispose_image(image);
 }
 
 ```
+
+1627749450585
