--- a/content/posts/[1627749450585][What is an Image][].md
+++ b/content/posts/[1627749450585][What is an Image][].md
@@ -1,7 +1,7 @@
 # What is an image?
 ## It's acually pretty easy
 
-An image is simply a pointer with a height and width.
+There is no point in beating around the bush.  An image is simply a pointer with a height and width.  We can represent it in code using a simple struct.
 
 ```cpp
 // make things easier to read
@@ -18,7 +18,9 @@ typedef struct
 } MonoImage;
 ```
 
-To create a new image...
+This is a monochrome (grayscale) image.  Each pixel is represented as an 8 bit unsigned integer with values ranging from 0 to 255.  A value of 0 means that the pixel is black, and 255 means that the pixel is white.  The values in between are different shades of gray.
+
+The pixels themselves are a block of memory with a size in bytes equal to the product of the width and height.  Each pixel being one byte.  In order to create a new image, we simply need to allocate memory on the heap.
 ```cpp
 #include <cassert>
 
@@ -35,25 +37,28 @@ void make_image(MonoImage& image, u32 width, u32 height)
 }
 ```
 
-When you are done with the image, clean up after yourself.
+We need to clean up after ourselves when we are done with the image.
 ```cpp
 void dispose_image(MonoImage& image)
 {
-    if(image.data)
+    if (image.data != nullptr)
     {
         free(image.data);
+        image.data = nullptr;
     }
 }
 ```
 
-Iterate over each pixel
+Iterating over an image is pretty straightforward.
 ```cpp
 void process_pixel(u8& p)
 {
     // do something with p
 }
 
-for(size_t i = 0; i < image.width * image.height; ++i)
+auto size = image.width * image.height;
+
+for(size_t i = 0; i < size; ++i)
 {
     process_pixel(image.data[i]);
 }
@@ -63,7 +68,7 @@ In more general terms...
 ```cpp
 #include <functional>
 
-void for_each_pixel(MonoImage& image, std::function<void(u8& p)> const& func)
+void for_each_pixel(MonoImage const& image, std::function<void(u8& p)> const& func)
 {
     for(size_t i = 0; i < image.width * image.height; ++i)
     {
@@ -72,9 +77,29 @@ void for_each_pixel(MonoImage& image, std::function<void(u8& p)> const& func)
 }
 ```
 
-To process each pixel based on its x and y position
+How an image is represented and rendered depends on the file type (e.g. bmp, jpg, png) and the operating system.  For the purposes of this article, the image data begins at the top left corner of the image and each subsequent pixel is the one to the right of it.  When the width is reached, the pixel is the beginning of the next row.
+
+We can also iterate over an image in terms of its x and y coodinates.
 ```cpp
-void for_each_pixel(MonoImage& image, std::function<void(u8& p, u32 x, u32 y)> const& func)
+for(u32 y = 0; y < image.height; ++y)
+{
+    // each y value is another row
+    // its distance from the beginning is the y value times the width
+    auto row_offset = static_cast<size_t>(y * image.width);
+    
+    // pointer to the beginning of the current row
+    auto row_begin = image.data + row_offset;
+
+    for(u32 x = 0; x < image.width; ++x)
+    {
+        process_pixel(row_begin[x]);
+    }
+}
+```
+
+Again, in more general terms.
+```cpp
+void for_each_pixel(MonoImage const& image, std::function<void(u8& p, u32 x, u32 y)> const& func)
 {
     for(u32 y = 0; y < image.height; ++y)
     {
@@ -83,14 +108,13 @@ void for_each_pixel(MonoImage& image, std::function<void(u8& p, u32 x, u32 y)> c
 
         for(u32 x = 0; x < image.width; ++x)
         {
-            auto& p = row_begin[x];
-            func(p, x, y);
+            func(row_begin[x], x, y);
         }
     }
 }
 ```
 
-Get the value of a pixel at a given x and y.
+Using what we know from above, we can get the value of a pixel at a given x and y.
 ```cpp
 u8 pixel_value(MonoImage const& image, u32 x, u32 y)
 {
@@ -101,7 +125,9 @@ u8 pixel_value(MonoImage const& image, u32 x, u32 y)
 }
 ```
 
-Putting it all together
+### Putting it all together
+
+Sample program below.
 ```cpp
 #include <cstdint>
 #include <cassert>
@@ -134,14 +160,15 @@ void make_image(MonoImage& image, u32 width, u32 height)
 
 void dispose_image(MonoImage& image)
 {
-    if(image.data)
+    if (image.data != nullptr)
     {
         free(image.data);
+        image.data = nullptr;
     }
 }
 
 
-void for_each_pixel(MonoImage& image, std::function<void(u8& p)> const& func)
+void for_each_pixel(MonoImage const& image, std::function<void(u8& p)> const& func)
 {
     for(size_t i = 0; i < image.width * image.height; ++i)
     {
@@ -150,7 +177,7 @@ void for_each_pixel(MonoImage& image, std::function<void(u8& p)> const& func)
 }
 
 
-void for_each_pixel(MonoImage& image, std::function<void(u8& p, u32 x, u32 y)> const& func)
+void for_each_pixel(MonoImage const& image, std::function<void(u8& p, u32 x, u32 y)> const& func)
 {
     for(u32 y = 0; y < image.height; ++y)
     {
@@ -177,13 +204,19 @@ u8 pixel_value(MonoImage const& image, u32 x, u32 y)
 
 int main()
 {
-    // sets a pixel to white
+    // lambda to set a pixel to white
     auto const set_white = [](u8& p) { p = 255; };
 
-    // set the pixel to black if x and y are both even
+    // lambda to set a pixel to black if x and y are both even
     auto const black_if_even = [](u8& p, u32 x, u32 y)
     {
         if (x % 2 == 0 && y % 2 == 0) { p = 0; }
+    };
+
+    // lambda to set a pixel to gray if x and y are both odd
+    auto const gray_if_odd = [](u8& p, u32 x, u32 y)
+    {
+        if (x % 2 != 0 && y % 2 != 0) { p = 125; }
     };
 
     // print to console whether a pixel is what we think it should be
@@ -208,14 +241,44 @@ int main()
     
     // set even x and y pixels to black
     for_each_pixel(image, black_if_even);
+
+    // set odd x and y pixels to gray
+    for_each_pixel(image, gray_if_odd);
+
+    // check for black pixels (both even)
     check_pixel(pixel_value(image, 0, 0), 0);
-    check_pixel(pixel_value(image, 3, 3), 255);
-    check_pixel(pixel_value(image, 15, 8), 255);
     check_pixel(pixel_value(image, 10, 6), 0);
+
+    // check for gray pixels (both odd)
+    check_pixel(pixel_value(image, 5, 7), 125);
+    check_pixel(pixel_value(image, 11, 1), 125);
+
+    // check for white pixels (odd and even)
+    check_pixel(pixel_value(image, 6, 3), 255);
+    check_pixel(pixel_value(image, 15, 8), 255);
 
     dispose_image(image);
 }
-
 ```
+
+* The program firsts creates a new image
+* Each pixel is set to the value of 255, i.e. white
+* Check three different x and y positions to make sure that they are in fact white
+* Set pixels to black (0) if both the x and y values are even numbers
+* Set pixels to gray (125) if both the x and y values are odd numbers
+* Check two x and y postions that should be black
+* Check two x and y positions that should be gray
+* Check two x and y positions that should still be white
+* Finally, release the image memory
+
+The output from the program shows that the pixels we checked were what we expected them to be.
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5Btodo%5D/output.bmp)
+
+The image generated by the program was only 16 pixels wide by 9 pixels high.  Here is an enlarged version.
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5Btodo%5D/bw.bmp)
+
+So without very much work, we can create a black and white image and manipulate it however we want.  We simply assign a value from 0 to 255 to a byte in memory and be sure that our coordinate system matches that of how we read and write images.  Reading and writing images will be covered in a future post, but first we need to cover color images.
 
 1627749450585
