--- a/docs/content/posts/[003][xxx].md
+++ b/docs/content/posts/[003][xxx].md
@@ -197,6 +197,8 @@ Create a file call image.hpp
 ```cpp
 #pragma once
 
+#include <functional>
+
 using u8 = unsigned char;
 using u32 = unsigned;
 
@@ -221,9 +223,14 @@ typedef struct RGBAImage_t
 } Image;
 
 
-void make_image(Image& image, u32 width, u32 height);
+bool operator == (Pixel const& lhs, Pixel const& rhs);
+
 
 void dispose_image(Image& image);
+
+void for_each_pixel(Image const& image, std::function<void(Pixel& p)> const& func);
+
+Pixel pixel_value(Image const& image, u32 x, u32 y);
 
 
 void read_image_from_file(const char* img_path_src, Image& image_dst);
@@ -244,16 +251,13 @@ Create a file called image.cpp for the implementation.
 #include <cassert>
 
 
-void make_image(Image& image, u32 width, u32 height)
+bool operator == (Pixel const& lhs, Pixel const& rhs)
 {
-    assert(width);
-    assert(height);
-
-    image.width = width;
-    image.height = height;
-    image.data = (Pixel*)malloc(sizeof(Pixel) * width * height);
-
-    assert(image.data);
+    return
+        lhs.red == rhs.red &&
+        lhs.green == rhs.green &&
+        lhs.blue == rhs.blue &&
+        lhs.alpha == rhs.alpha;
 }
 
 
@@ -264,6 +268,24 @@ void dispose_image(Image& image)
         free(image.data);
         image.data = nullptr;
     }
+}
+
+
+void for_each_pixel(Image const& image, std::function<void(Pixel& p)> const& func)
+{
+    for (size_t i = 0; i < image.width * image.height; ++i)
+    {
+        func(image.data[i]);
+    }
+}
+
+
+Pixel pixel_value(Image const& image, u32 x, u32 y)
+{
+    auto row_offset = static_cast<size_t>(y * image.width);
+    auto row_begin = image.data + row_offset;
+
+    return row_begin[x];
 }
 
 
@@ -305,3 +327,56 @@ void write_image(Image const& image_src, const char* file_path_dst)
 }
 
 ```
+
+Main program
+
+```cpp
+int main()
+{
+    auto image_src_path = "pixel-character.png";
+
+	Image image;
+	read_image_from_file(image_src_path, image);
+
+	Pixel blue = { 0, 35, 139, 255 };
+	Pixel red = { 237, 41, 57, 255 };
+	Pixel white = { 255, 255, 255, 255 };
+
+    // find the color of the character's shirt by selecting the pixel in the middle of the image
+	auto src_color = pixel_value(image, image.width / 2, image.height / 2);
+	
+    // change the character's shirt to blue
+    auto dst_color = blue;	
+
+	auto const convert = [&](Pixel& p) 
+	{
+		if (p == src_color)
+		{
+			p = dst_color;
+		}
+	};
+
+	for_each_pixel(image, convert);
+
+	write_image(image, "pixel-character-blue.bmp");
+
+    // now change the blue shirt to red
+	src_color = dst_color;
+	dst_color = red;
+
+	for_each_pixel(image, convert);
+
+	write_image(image, "pixel_character-red.bmp");
+
+	dispose_image(image);
+}
+
+```
+
+* Reads the png image
+* Gets the image's center pixel to determine the color of the character's shirt
+* Set each pixel of the character's shirt to blue
+* Write the image as a bmp
+* Set each pixel of the character's shirt to red
+* Write another image as a bmp
+* Cleanup the image memory
