--- a/docs/content/posts/[003][xxx].md
+++ b/docs/content/posts/[003][xxx].md
@@ -2,12 +2,18 @@
 ## Using stb_image
 
 
-stb_image can be found here:
+### stb
+
+We will be using two public domain libraries called stb_image and stb_image_write.  the stb libraries (https://github.com/nothings/stb) is a collection of single-file public domain libraries provided by Sean T. Barrett and others.  They are easy to use because there is nothing to install and you only need to include the file(s) in your project.
+
+### Reading image files
+In order to read image files we need stb_image.
 
 https://github.com/nothings/stb/blob/master/stb_image.h
 
+The file has lots of documentation in the comments.  Below are some excerpts.
 
-Explains how to use the file.
+First it explains how to use the file.  There is an include guard around the implementation code so that we can include the API declarations in multiple files and have the implementation only included once.
 
 ```cpp
 /* stb_image - v2.27 - public domain image loader - http://nothings.org/stb
@@ -28,7 +34,7 @@ Explains how to use the file.
 */
 ```
 
-Explanation of how the API works.
+Next, there is an explanation of how the API works.  You specify the number of channels you want your image data to have and pass variable references for the width and height.  The function returns a pointer to the image data.
 
 ```cpp
 // Standard parameters:
@@ -60,18 +66,17 @@ Explanation of how the API works.
 //       4           red, green, blue, alpha
 ```
 
-The function used for reading an image file.
+The function we will use is below.  It returns a pointer to an unsigned char which is a one byte unsigned integer.
 
 ```cpp
 typedef unsigned char stbi_uc;
-
 #define STBIDEF extern
-
 
 STBIDEF stbi_uc *stbi_load(char const *filename, int *x, int *y, int *channels_in_file, int desired_channels);
 ```
 
-How we can implement it based on what we've done so far
+Using what we've done in the previous posts, we can wrap the function for our use case.
+
 ```cpp
 #include <cassert>
 
@@ -122,9 +127,15 @@ void read_image_from_file(const char* img_path_src, Image& image_dst)
 }
 ```
 
-Writing images
+The 4 channels are interleaved, meaning that each pixel is 4 consecutive bytes.  Casting the pointer returned as a Pixel* will allow us to iterate over the data 4 bytes at a time.
+
+### Writing images
+
+The code needed to write image files is contained in another library called stb_image_write.
 
 https://github.com/nothings/stb/blob/master/stb_image_write.h
+
+It has a similar include guard.
 
 ```cpp
 /* stb_image_write - v1.16 - public domain - http://nothings.org/stb
@@ -142,7 +153,8 @@ https://github.com/nothings/stb/blob/master/stb_image_write.h
    */
 ```
 
-Write to different file types
+There are functions for writing multiple file types.
+
 ```cpp
 /*
 ...
@@ -161,15 +173,16 @@ USAGE:
 */
 ```
 
-We will write bitmap (.bmp) files.
+We will use the bitmap (bmp) version for our example.
+
 ```cpp
 #define STBIWDEF  extern
-
 
 STBIWDEF int stbi_write_bmp(char const *filename, int w, int h, int comp, const void  *data);
 ```
 
-Implementation
+Here is a function we can use to write one our images.
+
 ```cpp
 #define STB_IMAGE_WRITE_IMPLEMENTATION
 #include "stb_image_write.h"
@@ -193,7 +206,10 @@ void write_image(Image const& image_src, const char* file_path_dst)
 }
 ```
 
-Create a file call image.hpp
+### Declarations
+
+In order to demonstrate, we first need to get organized.  Create a header file called image.hpp and paste the following code in it.  Here we define our pixel and image and declare the functions we will use.
+
 ```cpp
 #pragma once
 
@@ -238,7 +254,10 @@ void read_image_from_file(const char* img_path_src, Image& image_dst);
 void write_image(Image const& image_src, const char* file_path_dst);
 ```
 
-Create a file called image.cpp for the implementation.
+### Implementation
+
+Next, create a file called image.cpp for the implementation of the above declarations.
+
 ```cpp
 #include "image.hpp"
 
@@ -325,12 +344,18 @@ void write_image(Image const& image_src, const char* file_path_dst)
 
     assert(result);
 }
-
 ```
 
-Main program
+### Sample Program
+
+I will use the following image for our demonstration.  The code is below.
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B003%5D/pixel-character.png)
 
 ```cpp
+
+#include "image.hpp"
+
 int main()
 {
     auto image_src_path = "pixel-character.png";
@@ -343,14 +368,14 @@ int main()
 	Pixel white = { 255, 255, 255, 255 };
 
     // find the color of the character's shirt by selecting the pixel in the middle of the image
-	auto src_color = pixel_value(image, image.width / 2, image.height / 2);
+	auto search_color = pixel_value(image, image.width / 2, image.height / 2);
 	
     // change the character's shirt to blue
     auto dst_color = blue;	
 
 	auto const convert = [&](Pixel& p) 
 	{
-		if (p == src_color)
+		if (p == search_color)
 		{
 			p = dst_color;
 		}
@@ -361,7 +386,7 @@ int main()
 	write_image(image, "pixel-character-blue.bmp");
 
     // now change the blue shirt to red
-	src_color = dst_color;
+	search_color = blue;
 	dst_color = red;
 
 	for_each_pixel(image, convert);
@@ -370,13 +395,23 @@ int main()
 
 	dispose_image(image);
 }
-
 ```
 
-* Reads the png image
-* Gets the image's center pixel to determine the color of the character's shirt
+Program summary:
+* Read the png image
+* Get the image's center pixel to determine the color of the character's shirt
 * Set each pixel of the character's shirt to blue
 * Write the image as a bmp
 * Set each pixel of the character's shirt to red
 * Write another image as a bmp
 * Cleanup the image memory
+
+Here are the two images generated by the program.
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B003%5D/pixel-character-blue.bmp)
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B003%5D/pixel-character-red.bmp)
+
+### Thank you stb
+
+Thanks to Sean Barrett and the other contributors to the stb libraries, normies like you and I can just get work done.  We can read any image type and write to any other image type allowing us to process all images in the same manner regardless of file format.  We can also create our own images and save them as any file type.  This saves us a lot of time trying to understand the specifications of each image file format.  To get an idea what this would take, go over the source code in stb_image.h and stb_image_write.h.  Thankfully we can just take it for granted, which is what a good library does.
