--- a/static_bv_client/public/content/posts/[004][].md
+++ b/static_bv_client/public/content/posts/[004][].md
@@ -1,62 +1,86 @@
 # Algorithms for free
 ## 
 
-So far we define our image as
 
-```cpp
-
-using u8 = unsigned char;
-using u32 = unsigned;
-
-
-typedef struct pixel_t
-{
-    u8 red;
-    u8 green;
-    u8 blue;
-    u8 alpha;
-} Pixel;
-
-
-typedef struct image_t
-{
-    u32 width;
-    u32 height;
-
-    Pixel* data;
-} Image;
-```
 
 C++ algorithms https://en.cppreference.com/w/cpp/algorithm
 
 ```cpp
 #include <vector>
 #include <algorithm>
+#include <numeric>
+#include <random>
 
 
-void vector_example(size_t size)
+int do_work(int n)
+{    
+    std::random_device r;
+    std::default_random_engine eng(r());
+    std::uniform_int_distribution<int> uniform_dist(10, 1000);
+
+    int sum = 0;
+
+    for(int i = 0; i < 100; ++i)
+    {
+        sum += uniform_dist(eng) % 3;
+    }
+
+    return sum;
+}
+
+
+void algorithm_example(size_t size)
 {
     std::vector<int> vec(size);
     
-    std::iota(vec.begin(), vec.end(), 1); // { 1, 2, 3, 4, ... , size }
-    // https://en.cppreference.com/w/cpp/algorithm/iota 
+    // { 1, 2, 3, 4, ... , size }
+    std::iota(vec.begin(), vec.end(), 1);
 
     auto const times_two = [](int& n){ n *= 2; };
     
-    std::for_each(vec.begin(), vec.end(), times_two); // double each element
-    // https://en.cppreference.com/w/cpp/algorithm/for_each
+    // double each element
+    std::for_each(vec.begin(), vec.end(), times_two);
 
     std::vector<int> dst(size);
 
-    std::transform(vec.begin(), vec.end(), dst.begin(), times_two);
-    // https://en.cppreference.com/w/cpp/algorithm/transform
+    // apply the do_work function to each value and store the results in dst
+    std::transform(vec.begin(), vec.end(), dst.begin(), do_work);
 }
-
-// std::execution::par
-
-
 ```
 
+The do_work function is intended to take some time generating a result.  It accumulates the a modulus calculation of 100 randomly generated numbers.
+
+The algorithm_example function demonstrates the standard algorithms std::for_each and std::transform.  It does the following.
+* Create a vector with the specified number of elements
+* Fill the vector with sequencially increasing numbers starting at 1 (https://en.cppreference.com/w/cpp/algorithm/iota)
+* Apply a lambda to each element doubling them (https://en.cppreference.com/w/cpp/algorithm/for_each)
+* Create another vector with the same size as the first.
+* Apply the do_work function each element and save the result to the new vector (https://en.cppreference.com/w/cpp/algorithm/transform)
+
+Parallel execution
+
+```cpp
+#include <execution>
+
+
+void algorithm_example_par(size_t size)
+{
+    std::vector<int> vec(size);
+    
+    // { 1, 2, 3, 4, ... , size }
+    std::iota(vec.begin(), vec.end(), 1);
+
+    auto const times_two = [](int& n){ n *= 2; };
+    
+    // double each element
+    std::for_each(std::execution::par, vec.begin(), vec.end(), times_two);
+
+    std::vector<int> dst(size);
+
+    // apply the do_work function to each value and store the results in dst
+    std::transform(std::execution::par, vec.begin(), vec.end(), dst.begin(), do_work);
+}
+```
 
 Here is a class used for timing things.  Copy and save it to a file called stopwatch.hpp
 
@@ -108,3 +132,4 @@ public:
 
 };
 ```
+
