--- a/static_bv_client/public/content/posts/[004][].md
+++ b/static_bv_client/public/content/posts/[004][].md
@@ -53,9 +53,9 @@ The do_work function is intended to take some time generating a result.  It accu
 The algorithm_example function demonstrates the standard algorithms std::for_each and std::transform.  It does the following.
 * Create a vector with the specified number of elements
 * Fill the vector with sequencially increasing numbers starting at 1 (https://en.cppreference.com/w/cpp/algorithm/iota)
-* Apply a lambda to each element doubling them (https://en.cppreference.com/w/cpp/algorithm/for_each)
+* Apply a lambda to each element, doubling them (https://en.cppreference.com/w/cpp/algorithm/for_each)
 * Create another vector with the same size as the first.
-* Apply the do_work function each element and save the result to the new vector (https://en.cppreference.com/w/cpp/algorithm/transform)
+* Call the do_work function with each element and save the result to the new vector (https://en.cppreference.com/w/cpp/algorithm/transform)
 
 Parallel execution
 
@@ -133,3 +133,28 @@ public:
 };
 ```
 
+Program
+
+```cpp
+
+#include <iostream>
+
+int main()
+{
+    Stopwatch sw;
+
+    auto const print_time = [&](const char* msg) { std::cout << msg << ": " << sw.get_time_milli() << "ms\n"; };
+
+    size_t count = 100000;
+
+    sw.start();
+
+    algorithm_example(count);
+    print_time("sequential");
+
+    sw.start();
+    algorithm_example_par(count);
+    print_time("  parallel");
+}
+
+```
