--- a/static_bv_client/public/content/posts/[004][].md
+++ b/static_bv_client/public/content/posts/[004][].md
@@ -133,7 +133,7 @@ public:
 };
 ```
 
-Program
+Here is a program that runs each example and outputs their execution times.
 
 ```cpp
 
@@ -147,6 +147,8 @@ int main()
 
     size_t count = 100000;
 
+    std::cout<<'\n';
+
     sw.start();
 
     algorithm_example(count);
@@ -158,3 +160,11 @@ int main()
 }
 
 ```
+
+Output when running in debug mode
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B004%5D/debug.png)
+
+Output when running in release mode
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B004%5D/release.png)
