--- a/static_bv_client/public/content/posts/[004][].md
+++ b/static_bv_client/public/content/posts/[004][].md
@@ -1,9 +1,12 @@
 # Algorithms for free
-## 
+## And parallelism too
 
 
+### Standard Algorithms
 
-C++ algorithms https://en.cppreference.com/w/cpp/algorithm
+There are a multitude of algorithms available in the C++ Standard Template Library (STL).  Cppreference is a good resource https://en.cppreference.com/w/cpp/algorithm.  There's no need to have them all memorized but it is good to know what is available.  There is a good chance that something already exists that will do what you need.  It can save you a lot of time trying to implement it yourself and also make your code cleaner and more readable.
+
+The STL algorithms operate on a range of elements that you specify by providing an iterator to the first element and another to one past the last element.  The standard containers have methods for begin() and end() respectively.  Consider the following example.
 
 ```cpp
 #include <vector>
@@ -14,6 +17,8 @@ C++ algorithms https://en.cppreference.com/w/cpp/algorithm
 
 int do_work(int n)
 {    
+    // This post is not about random number generation.
+    // We just want a function that takes some time to complete.
     std::random_device r;
     std::default_random_engine eng(r());
     std::uniform_int_distribution<int> uniform_dist(10, 1000);
@@ -50,14 +55,22 @@ void algorithm_example(size_t size)
 
 The do_work function is intended to take some time generating a result.  It accumulates the a modulus calculation of 100 randomly generated numbers.
 
-The algorithm_example function demonstrates the standard algorithms std::for_each and std::transform.  It does the following.
+The algorithm_example function demonstrates the standard algorithms std::iota, std::for_each and std::transform.  It does the following.
 * Create a vector with the specified number of elements
 * Fill the vector with sequencially increasing numbers starting at 1 (https://en.cppreference.com/w/cpp/algorithm/iota)
 * Apply a lambda to each element, doubling them (https://en.cppreference.com/w/cpp/algorithm/for_each)
 * Create another vector with the same size as the first.
-* Call the do_work function with each element and save the result to the new vector (https://en.cppreference.com/w/cpp/algorithm/transform)
+* Call the do_work function with each element and save the result in the new vector (https://en.cppreference.com/w/cpp/algorithm/transform)
 
-Parallel execution
+These algorithms operate on each element one at a time starting at the beginning and moving sequencially until it reaches the end or the end iterator you provide.  For example, you can sort only the first 10 elements of a containiner.
+
+```cpp
+std::sort(vec.begin(), vec.begin() + 10);
+```
+
+### Parallelism
+
+If your collections are quite large, then operating on each element one at a time can be a bottleneck in your application.  C++17 introduced the ability for many algorithms to use multi-threading in order to process several elements at the same time.  How this is executed will depend on the operating system and the computer's CPU.  What this means for developers is that this functionality is available without any extra programming.  We only need to pass a parameter indicating that we wish the algorithm to execute in parallel.
 
 ```cpp
 #include <execution>
@@ -82,7 +95,12 @@ void algorithm_example_par(size_t size)
 }
 ```
 
-Here is a class used for timing things.  Copy and save it to a file called stopwatch.hpp
+This example is the same as the one above except that we passed the Execution Policy std::execution::par to std::for_each and std::transform.  This should take less time to execute but we need to test it manually.
+
+
+### Example
+
+The following class can be used for timing processes.  Copy and save it to a file called stopwatch.hpp
 
 ```cpp
 #pragma once
@@ -133,11 +151,13 @@ public:
 };
 ```
 
-Here is a program that runs each example and outputs their execution times.
+This program runs each example and outputs their execution times.
 
 ```cpp
-
 #include <iostream>
+
+#include "stopwatch.hpp"
+
 
 int main()
 {
@@ -161,10 +181,10 @@ int main()
 
 ```
 
-Output when running in debug mode
+Output when running in debug mode.
 
 ![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B004%5D/debug.png)
 
-Output when running in release mode
+Output when running in release mode.
 
 ![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B004%5D/release.png)
