--- a/static_bv_client/public/content/posts/[004][].md
+++ b/static_bv_client/public/content/posts/[004][].md
@@ -15,17 +15,18 @@ The STL algorithms operate on a range of elements that you specify by providing 
 #include <random>
 
 
+constexpr unsigned AMOUNT_OF_WORK = 100;
+
+
 int do_work(int n)
-{    
-    // This post is not about random number generation.
-    // We just want a function that takes some time to complete.
+{
     std::random_device r;
     std::default_random_engine eng(r());
     std::uniform_int_distribution<int> uniform_dist(10, 1000);
 
     int sum = 0;
 
-    for(int i = 0; i < 100; ++i)
+    for (unsigned i = 0; i < AMOUNT_OF_WORK; ++i)
     {
         sum += uniform_dist(eng) % 3;
     }
@@ -34,35 +35,46 @@ int do_work(int n)
 }
 
 
-void algorithm_example(size_t size)
+void process_vector(std::vector<int>& src, std::vector<int>& dst)
 {
-    std::vector<int> vec(size);
-    
-    // { 1, 2, 3, 4, ... , size }
-    std::iota(vec.begin(), vec.end(), 1);
+    auto const times_two = [](int& n) { n *= 2; };
 
-    auto const times_two = [](int& n){ n *= 2; };
-    
-    // double each element
-    std::for_each(vec.begin(), vec.end(), times_two);
+    // double each element in src
+    std::for_each(src.begin(), src.end(), times_two);
 
-    std::vector<int> dst(size);
-
-    // apply the do_work function to each value and store the results in dst
-    std::transform(vec.begin(), vec.end(), dst.begin(), do_work);
+    // apply the do_work function to each value of src and store the results in dst
+    std::transform(src.begin(), src.end(), dst.begin(), do_work);
 }
 ```
 
-The do_work function is intended to take some time generating a result.  It accumulates the a modulus calculation of 100 randomly generated numbers.
+The do_work function is intended to take some time generating a result.  It accumulates the modulus calculation of 100 randomly generated numbers.  We can adjust the amount of time it takes with the AMOUNT_OF_WORK constant.
 
-The algorithm_example function demonstrates the standard algorithms std::iota, std::for_each and std::transform.  It does the following.
-* Create a vector with the specified number of elements
-* Fill the vector with sequencially increasing numbers starting at 1 (https://en.cppreference.com/w/cpp/algorithm/iota)
-* Apply a lambda to each element, doubling them (https://en.cppreference.com/w/cpp/algorithm/for_each)
-* Create another vector with the same size as the first.
-* Call the do_work function with each element and save the result in the new vector (https://en.cppreference.com/w/cpp/algorithm/transform)
+The process function demonstrates the standard algorithms std::for_each and std::transform.  It does the following.
+* Apply a lambda to each element of src, doubling them in place (https://en.cppreference.com/w/cpp/algorithm/for_each)
+* Call the do_work function with each element of src and save the result in dst (https://en.cppreference.com/w/cpp/algorithm/transform)
 
-These algorithms operate on each element one at a time starting at the beginning and moving sequencially until it reaches the end or the end iterator you provide.  For example, you can sort only the first 10 elements of a containiner.
+Many people find it irritating to have to pass begin and end iterators to these functions instead of just the container like in many other languages.  Sometimes they resort to writing wrapper functions to make their code more concise.
+
+```cpp
+template <typename T>
+void sort(T& container)
+{
+    std::sort(container.begin(), container.end());
+}
+```
+
+This has the drawback of having to write an overload for each of the algorithm's overloads that you want to use.
+
+Another option is the std::ranges namespace for algorithms.  That is a topic worthy of its own post but one thing it allows for is more concise function calls.
+
+```cpp
+std::ranges::sort(vec);
+```
+
+
+
+
+These algorithms operate on each element one at a time starting at the beginning and moving sequencially until the end.  For example, you can sort only the first 10 elements of a containiner.
 
 ```cpp
 std::sort(vec.begin(), vec.begin() + 10);
@@ -76,31 +88,24 @@ If your collections are quite large, then operating on each element one at a tim
 #include <execution>
 
 
-void algorithm_example_par(size_t size)
+void process_vector_par(std::vector<int>& src, std::vector<int>& dst)
 {
-    std::vector<int> vec(size);
-    
-    // { 1, 2, 3, 4, ... , size }
-    std::iota(vec.begin(), vec.end(), 1);
+    auto const times_two = [](int& n) { n *= 2; };
 
-    auto const times_two = [](int& n){ n *= 2; };
-    
-    // double each element
-    std::for_each(std::execution::par, vec.begin(), vec.end(), times_two);
+    // double each element in src
+    std::for_each(std::execution::par, src.begin(), src.end(), times_two);
 
-    std::vector<int> dst(size);
-
-    // apply the do_work function to each value and store the results in dst
-    std::transform(std::execution::par, vec.begin(), vec.end(), dst.begin(), do_work);
+    // apply the do_work function to each value of src and store the results in dst
+    std::transform(std::execution::par, src.begin(), src.end(), dst.begin(), do_work);
 }
 ```
 
-This example is the same as the one above except that we passed the Execution Policy std::execution::par to std::for_each and std::transform.  This should take less time to execute but we need to test it manually.
+This example is the same as the one above except that we passed the Execution Policy std::execution::par to std::for_each and std::transform.  This should faster but we need to test it.
 
 
-### Example
+### Speed Test
 
-The following class can be used for timing processes.  Copy and save it to a file called stopwatch.hpp
+The following class can be used for timing code execution.  Copy and save it to a file called stopwatch.hpp
 
 ```cpp
 #pragma once
@@ -159,26 +164,34 @@ This program runs each example and outputs their execution times.
 #include "stopwatch.hpp"
 
 
+constexpr unsigned ELEMENT_COUNT = 100000;
+
+
 int main()
 {
     Stopwatch sw;
 
     auto const print_time = [&](const char* msg) { std::cout << msg << ": " << sw.get_time_milli() << "ms\n"; };
 
-    size_t count = 100000;
+    std::vector<int> src_vec(ELEMENT_COUNT);
+    std::vector<int> dst_vec(ELEMENT_COUNT);
 
-    std::cout<<'\n';
+    // { 1, 2, 3, 4, ... , size }
+    std::iota(src_vec.begin(), src_vec.end(), 1);
+
+    std::cout << '\n';
 
     sw.start();
-
-    algorithm_example(count);
+    process_vector(src_vec, dst_vec);
     print_time("sequential");
 
+    // reset src_vec
+    std::iota(src_vec.begin(), src_vec.end(), 1);
+
     sw.start();
-    algorithm_example_par(count);
+    process_vector_par(src_vec, dst_vec);
     print_time("  parallel");
 }
-
 ```
 
 Output when running in debug mode.
@@ -188,3 +201,5 @@ Output when running in debug mode.
 Output when running in release mode.
 
 ![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B004%5D/release.png)
+
+In both cases, the sequential version took almost 5 times longer to execute.  The times in this example are still very small but the time adds up when working with 
