--- a/static_bv_client/public/content/posts/[004][].md
+++ b/static_bv_client/public/content/posts/[004][].md
@@ -49,13 +49,15 @@ void process_vector(std::vector<int>& src, std::vector<int>& dst)
 
 The do_work function is intended to take some time generating a result.  It accumulates the modulus calculation of 100 randomly generated numbers.  We can adjust the amount of time it takes with the AMOUNT_OF_WORK constant.
 
-The process function demonstrates the standard algorithms std::for_each and std::transform.  It does the following.
+The process_vector function demonstrates the standard algorithms std::for_each and std::transform.  It does the following.
 * Apply a lambda to each element of src, doubling them in place (https://en.cppreference.com/w/cpp/algorithm/for_each)
-* Call the do_work function with each element of src and save the result in dst (https://en.cppreference.com/w/cpp/algorithm/transform)
+* Call the do_work function with each element of src and saves the result in dst (https://en.cppreference.com/w/cpp/algorithm/transform)
 
-Many people find it irritating to have to pass begin and end iterators to these functions instead of just the container like in many other languages.  Sometimes they resort to writing wrapper functions to make their code more concise.
+Many people find it irritating to have to pass begin and end iterators to these functions instead of just the container like in many other languages.  Sometimes they resort to writing wrapper functions to make their code more concise.  However, this has the drawback of having to maintain another library.
 
 ```cpp
+// https://en.cppreference.com/w/cpp/algorithm/sort
+
 template <typename T>
 void sort(T& container)
 {
@@ -63,26 +65,38 @@ void sort(T& container)
 }
 ```
 
-This has the drawback of having to write an overload for each of the algorithm's overloads that you want to use.
-
-Another option is the std::ranges namespace for algorithms.  That is a topic worthy of its own post but one thing it allows for is more concise function calls.
+Another option is the std::ranges namespace introduced in C++20.  That is a topic worthy of its own post but one thing it allows for is more concise function calls.
 
 ```cpp
+// https://en.cppreference.com/w/cpp/algorithm/ranges/sort
+
 std::ranges::sort(vec);
 ```
 
-
-
-
-These algorithms operate on each element one at a time starting at the beginning and moving sequencially until the end.  For example, you can sort only the first 10 elements of a containiner.
+In any case, begin and end iterators are still required to define the range we want to perform the algorithm on.  We also have the option to only apply an algorithm to part of the range.  For example, we can sort only the first 10 elements of a containiner.
 
 ```cpp
 std::sort(vec.begin(), vec.begin() + 10);
 ```
 
+We can also sort only the last 10 elements.
+
+```cpp
+std::sort(vec.end() - 10, vec.end());
+```
+
+Or everthing but the first and last 10 elements.
+
+```cpp
+std::sort(vec.begin() + 10, vec.end - 10);
+```
+
+The intent for specifying the begin and end iterators is to provide flexibility and functionality instead of simplicity.
+
+
 ### Parallelism
 
-If your collections are quite large, then operating on each element one at a time can be a bottleneck in your application.  C++17 introduced the ability for many algorithms to use multi-threading in order to process several elements at the same time.  How this is executed will depend on the operating system and the computer's CPU.  What this means for developers is that this functionality is available without any extra programming.  We only need to pass a parameter indicating that we wish the algorithm to execute in parallel.
+If your collections are quite large, then operating on each element one at a time can be a bottleneck in your application.  C++17 introduced the ability for many algorithms to process several elements at the same time using multi-threading.  How this is executed will depend on the operating system and the computer's CPU.  What this means for developers is that this functionality is available without any extra programming.  We only need to pass a parameter indicating that we wish the algorithm to execute in parallel.
 
 ```cpp
 #include <execution>
@@ -202,4 +216,17 @@ Output when running in release mode.
 
 ![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B004%5D/release.png)
 
-In both cases, the sequential version took almost 5 times longer to execute.  The times in this example are still very small but the time adds up when working with 
+In both cases, the sequential version took almost 5 times longer to execute.  The times in this example are still very small but the time adds up when working with larger collections and when the processing is more intensive.  You can experiment with this yourself by changing the values of AMOUNT_OF_WORK and ELEMENT_COUNT. Also, check and see how it affects your computer's CPU usage by openning Task Manager (Ctrl+Shift+Esc) and selecting the Performance tab.
+
+For instance, when I increase each value by a factor of 10 I get the following result.
+
+```cpp
+constexpr unsigned AMOUNT_OF_WORK = 1000;
+constexpr unsigned ELEMENT_COUNT = 1000000;
+```
+
+![alt text](https://github.com/adam-lafontaine/CMS/raw/master/img/%5B004%5D/cpu_usage.png)
+
+While running sequencially, the CPU usage is at about 40%.  It then goes up to 100% while it does the parallel processing.  This shows that parallel execution can be a CPU resource hog.  It could slow down other processes running on the computer especially if they require significant CPU resources as well.  It's also impossible to know how much faster it will be if other processes will be running at the same time.
+
+As with anything, there are always several factors to take into consideration.  Parallel execution is not a magic bullet but it can be extremely useful and is basically free.  
